--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "outDir": "build",
+      "outDir": "./dist/",
       "module": "esnext",
       "target": "es5",
       "lib": ["es6", "dom", "es2016", "es2017"],
@@ -18,6 +18,6 @@
       "noUnusedLocals": true,
       "noUnusedParameters": true
     },
-    "include": ["lib"],
-    "exclude": ["node_modules", "build"]
+    "include": ["src/*/**.ts", "src/*/**.tsx"],
+    "exclude": ["node_modules", "dist"]
 }
