--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "strictNullChecks": true,
       "suppressImplicitAnyIndexErrors": true,
       "noUnusedLocals": true,
-      "noUnusedParameters": true
+      "noUnusedParameters": true,
+      "allowSyntheticDefaultImports": true
     },
     "include": ["src/*/**.ts", "src/*/**.tsx"],
     "exclude": ["node_modules", "dist"]
