--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-      "outDir": "./dist/",
+      "outDir": "./lib/",
       "module": "esnext",
       "target": "es5",
       "lib": ["es6", "dom", "es2016", "es2017"],
       "sourceMap": true,
-      "allowJs": false,
+      "allowJs": true,
       "jsx": "react",
       "declaration": true,
       "moduleResolution": "node",
@@ -19,6 +19,6 @@
       "noUnusedParameters": true,
       "allowSyntheticDefaultImports": true
     },
-    "include": ["src/*/**.ts", "src/*/**.tsx"],
-    "exclude": ["node_modules", "dist"]
+    "include": ["src/lib/*.tsx"],
+    "exclude": ["node_modules", "dist", "lib"]
 }
