--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "demo:dev": "webpack-dev-server --mode development",
     "demo:prod": "webpack --mode production"
   },
-  "keywords": ["copy email", "react"],
+  "keywords": [
+    "copy email",
+    "react"
+  ],
   "author": "Devfolio",
   "license": "MIT",
   "peerDependencies": {
@@ -22,6 +25,7 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
