--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "outDir": "./lib/",
       "module": "esnext",
       "target": "es5",
-      "lib": ["es6", "dom", "es2016", "es2017"],
+      "lib": ["es6", "dom", "es2016", "es2017","es2018","es2019"],
       "sourceMap": true,
       "allowJs": true,
       "jsx": "react",
@@ -17,7 +17,9 @@
       "suppressImplicitAnyIndexErrors": true,
       "noUnusedLocals": true,
       "noUnusedParameters": true,
-      "allowSyntheticDefaultImports": true
+      "allowSyntheticDefaultImports": true,
+      "removeComments": true,
+      "preserveConstEnums": true
     },
     "include": ["src/lib/*.tsx"],
     "exclude": ["node_modules", "dist", "lib"]
