--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "babel src/lib --out-dir lib --out-file-extension .cjs.js --extensions '.ts,.tsx' && tsc",
     "demo:dev": "webpack-dev-server --mode development",
     "demo:prod": "webpack --mode production",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "format": "prettier --write src/lib/**/*.tsx",
+    "lint": "tsc --noEmit && eslint src/lib/**/*.tsx",
+    "lint:fix": "npm run lint -- --fix"
   },
   "keywords": [
     "copy email",
@@ -30,8 +33,22 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "babel-eslint": "^10.1.0",
     "css-loader": "^4.0.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "source-map-loader": "^1.0.1",
@@ -41,6 +58,17 @@
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,css,ts,tsx}": [
+      "npm run format",
+      "npm run lint"
+    ]
   },
   "repository": {
     "type": "git",
